# dso-toolkit-browser-test

./: Dockerfile  LICENSE  README.md  pyproject.toml
data/: .gitignore
resources/: browser.resource  general.resource  image_compare.resource  storybook.resource
results/: log.html  output.xml  playwright-log.txt  report.html
tests/: __Init__.robot  storybook.robot  storybook_image_compare.robot  storybook_image_compare_dd.robot
